--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
 pods/
+Carthage/
+Carthage/Build/
+Frameworks/
+!Cartfile.resolved
 !Podfile.lock
-Teraffic Traffic.xcodeproj/xcuserdata
-Teraffic Traffic.xcworkspace/xcuserdata
+xcuserdata/
+
+### Xcode ###
+## User settings
+xcuserdata/
+
+## Xcode 8 and earlier
+*.xcscmblueprint
+*.xccheckout
+
+### Xcode Patch ###
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcodeproj/project.xcworkspace/
+!*.xcworkspace/contents.xcworkspacedata
+/*.gcno
+**/xcshareddata/WorkspaceSettings.xcsettings
